# Chess_Engine

./: .gitignore  55d9f65_xadrez-book_vs_sf1800_50%.pgn  55d9f65_xadrez-book_vs_sf2200_50%.pgn  BOOK_LOAD_TEST.txt  CLAUDE.md  CMakeLists.txt  METRICS.md  SF1800_BOOK_TEST.txt  SF2200_BOOK_TEST.txt  baseline.pgn  engines.ini  test.ps1  test_60_1.pgn  test_config.ini  test_endgames.txt  test_longer_tc.pgn  test_master_vs_sf1000.pgn  test_qsearch.pgn  test_results_sf1000_1_0.pgn  test_results_sf1800_1_0.1.pgn  test_results_sf1800_1_0.pgn  test_results_sf1800_1_1.pgn  test_results_sf1800_60_1.pgn  test_results_sf2400_1_0.1.pgn  test_results_sf2400_1_0.pgn  test_sf2200.cfg  test_uci_input.txt  test_uci_mate.txt  test_vs_sf2200.pgn  test_working_baseline.pgn
docs/superpowers/plans/: 2026-04-19-magic-bitboards.md  2026-04-20-search-eval-uci.md  2026-04-21-repetition-detection.md  2026-04-22-mate-score-output.md  2026-04-26-tapered-eval.md
docs/superpowers/specs/: 2026-04-19-magic-bitboards-design.md  2026-04-20-search-eval-uci-design.md  2026-04-26-tapered-eval-design.md
src/: board.cpp  board.h  book.cpp  book.h  eval.cpp  eval.h  magic.cpp  magic.h  main.cpp  movegen.cpp  movegen.h  search.cpp  search.h  tablebase.cpp  tablebase.h  types.h  uci.cpp  uci.h
tests/: book_test.cpp  perft.cpp
